[build-system]
requires = ["scikit-build-core>=0.7"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/skbuild"

[project]
name = "wolvrix"
version = "0.1.0"
description = "Wolvrix Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Wolvrix contributors"}]
keywords = ["systemverilog", "rtl", "eda", "ir", "compiler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
]
